--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -8,8 +8,6 @@ title:  Dynamic Positioning for ASV
 
 The aim of this M.Sc. project is to develop dynamic positioning for the Telemetron vehicle.
 
-
-
 ## Supervisor
 
-Main supervisor: Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>), Professor, NTNU
+Main supervisor: Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>), Professor, NTNU.
