--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -6,7 +6,7 @@ title:  Dynamic Positioning for ASV
 
 ![The Telemetron vehicle of Maritime Robotics]({{site.url}}/assets/telemetron4a.jpg)
 
-The aim of this M.Sc. project is to develop dynamic positioning for the Telemetron vehicle.
+The surface vehicle Telemetron owned by Maritime Robotics is currently the primary test vehicle used in the Autosea project. In this M.Sc. project, the candidate should develop a dynamic positioning system for Telemetron.
 
 ## Supervisor
 
