--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -6,8 +6,8 @@ title:  Dynamic Positioning for ASV
 
 ![The Telemetron vehicle of Maritime Robotics]({{site.url}}/assets/telemetron4a.jpg)
 
-The surface vehicle Telemetron owned by Maritime Robotics is currently the primary test vehicle used in the Autosea project. In this M.Sc. project, the candidate should develop a dynamic positioning system for Telemetron.
+A dynamic positioning (DP) system for small ASV shall be developed. This involves primarily algorithm and software design, implementation and experimental testing on an ASV in collaboration with Maritime Robotics. The DP system will interface to existing ASV system architectures with GPS and compass for reference, and control water jets and thruster to keep position and heading, or track a given path.
 
-## Supervisor
+## Supervisors
 
-Main supervisor: Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>), Professor, NTNU.
+Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>) and Thor I. Fossen in collaboration Thomas Ingebretsen and Vegard Hovstein (Maritime Robotics).
