updated supervisors and links

--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -10,4 +10,4 @@ A dynamic positioning (DP) system for small ASV shall be developed. This involve
 
 ## Supervisors
 
-Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>) and Thor I. Fossen in collaboration Thomas Ingebretsen and Vegard Hovstein (Maritime Robotics).
+[Tor Arne Johansen](http://www.ntnu.no/ansatte/torarnj) and [Thor I. Fossen](http://www.ntnu.no/ansatte/thor.fossen) in collaboration Thomas Ingebretsen and Vegard Hovstein (Maritime Robotics).
