--- a/_posts/2015-11-20-mpc.md
+++ b/_posts/2015-11-20-mpc.md
@@ -10,6 +10,6 @@ The objective of the thesis is the study of an MPC approach to the collision avo
 
 ## Supervisors
 
-Main supervisor: Tor Arne Johansen (<tor.arne.johansen@itk.ntnu.no>), Professor, NTNU
+Main supervisor: [Tor Arne Johansen](http://www.ntnu.no/ansatte/torarnj), Professor, NTNU
 
-Co-supervisors: Andrea Cristofaro (<andrea.cristofaro@itk.ntnu.no>), Research Fellow and Adjunct Associate Professor, NTNU.
+Co-supervisor: [Giorgio](http://www.ntnu.no/ansatte/kufoalor), Post-doc, NTNU.
