Updated Giorgios name

--- a/_posts/2015-11-20-mpc.md
+++ b/_posts/2015-11-20-mpc.md
@@ -12,4 +12,4 @@ The objective of the thesis is the study of an MPC approach to the collision avo
 
 Main supervisor: [Tor Arne Johansen](http://www.ntnu.no/ansatte/torarnj), Professor, NTNU
 
-Co-supervisor: [Giorgio](http://www.ntnu.no/ansatte/kufoalor), Post-doc, NTNU.
+Co-supervisor: [D. Kwame Minde Kufoalor (Giorgio)](http://www.ntnu.no/ansatte/kufoalor), Post-doc, NTNU.
