--- a/_posts/2016-04-15-dw-colav.md
+++ b/_posts/2016-04-15-dw-colav.md
@@ -8,9 +8,9 @@ The Dynamic Window (DW) approach to collision avoidance (COLAV) was introduced f
 
 As mentioned, this proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
 
-| ![]({{site.url}}/assets/mariner.jpg)) | ![]({{site.url}}/assets/telemetron4a.jpg) |
+| ![]({{site.url}}/assets/mariner.jpg) | ![]({{site.url}}/assets/telemetron4a.jpg) |
 |:---:|:---:|
-| hUSV Mariner, an unmanned surface vehicle | MR Telemetron, a dual-use surface vessel |
+| USV Mariner, an unmanned surface vehicle | MR Telemetron, a dual-use surface vessel |
 
 ## Proposed Tasks
 **For the project assignment (autumn 2016), the following tasks are proposed:**
