--- a/_posts/2016-04-15-obsTraj.md
+++ b/_posts/2016-04-15-obsTraj.md
@@ -8,7 +8,7 @@ When operating autonomously at sea, a collision avoidance (COLAV) system must be
 
 This proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
 
-| <img src="{{site.url}}/assets/ECDISmap.jpg" width="370"> | | <img src="{{site.url}}/assets/aisMap.png" width="370"> |
+| <img src="{{site.url}}/assets/ecdismap.jpg" width="370"> | | <img src="{{site.url}}/assets/aismap.png" width="370"> |
 |:---:| :---: |:---:|
 | Electronic charts contains large amount of static information, which can be usable for predicting future vessel positions. | | AIS data can give additional information about both historical trajectories, and current intentions of other vessels. |
 
