Added autosea description to all tasks

--- a/_posts/2016-04-15-dw-colav.md
+++ b/_posts/2016-04-15-dw-colav.md
@@ -6,7 +6,7 @@ Autonomous technology is spreading across numerous applications at an unpreceden
 
 The Dynamic Window (DW) approach to collision avoidance (COLAV) was introduced for robots in the late 1990s. A series of modifications to the algorithm are proposed, and in particular the algorithm has been adapted for use with both autonomous underwater vehicles (AUVs) and autonomous surface vehicles (ASVs). This combined project and master thesis proposal focuses on further development of the DW algorithm applied to ASVs. The plan is that the DW algorithm is to be included in a multi-layer (hybrid) COLAV architecture, and act as a “last line of defense” in avoiding collision. It should also be investigated if the algorithm is suited to partly of fully comply with the international regulations for preventing collisions at sea (COLREGS).
 
-As mentioned, this proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
+As mentioned, this proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. 
 
 | <img src="{{site.url}}/assets/mariner.jpg" width="370"> | | <img src="{{site.url}}/assets/telemetron4a.jpg" width="370"> |
 |:---:| :---: |:---:|
@@ -28,6 +28,9 @@ As mentioned, this proposal is intended as a combined project and master thesis 
 2. Modify the DW algorithm to work as a trajectory tracker, and investigate possible interfaces between deliberate (high-level) COLAV algorithms and the DW algorithm in hybrid architectures. This work may be supported by another MSc-candidate working on cascaded nonlinear feedback control of ships.
 3. Is the DW algorithm suited to partly or fully handle COLREGS?
 4. Based on the simulation results, full-scale tests may be possible.
+
+## Autosea
+The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
 
 ## Supervisors 
 Main supervisor: [Morten Breivik](http://www.ntnu.no/ansatte/morten.breivik). <br />
