--- a/_posts/2016-04-15-obsTraj.md
+++ b/_posts/2016-04-15-obsTraj.md
@@ -6,7 +6,7 @@ Autonomous technology is spreading across numerous applications at an unpreceden
 
 When operating autonomously at sea, a collision avoidance (COLAV) system must be able to tackle the dangers imposed by other vessels operating in the same area. To avoid moving obstacles, one must have an idea about the future positions of these obstacles. A common approach is to assume that other vessels will keep their course and speed, and calculate a straight-line trajectory based on this assumption. This approach may, however, prove insufficient in some scenarios. By considering previous positions, electronic nautical charts, historical and/or real-time AIS (automatic identification system) data, traffic lanes etc., better estimates can often be obtained. This project will look into alternative solutions based on such data.
 
-This proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
+This proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. 
 
 | <img src="{{site.url}}/assets/ecdismap.jpg" width="370"> | | <img src="{{site.url}}/assets/aismap.png" width="370"> |
 |:---:| :---: |:---:|
@@ -26,6 +26,9 @@ This proposal is intended as a combined project and master thesis during the aut
 2. Is real-time AIS data useful (and reliable) to impose further constraints on the prediction?
 3. Use the proposed prediction technique and parameterization to predict trajectories for moving obstacles.
 4. Use the predicted trajectories as input to a COLAV algorithm, and compare the performance with the approach of assuming constant course and speed.
+
+## Autosea
+The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
 
 ## Supervisors 
 Main supervisor: [Edmund F. Brekke](https://www.ntnu.no/ansatte/edmund.brekke). <br />
