--- a/_posts/2016-04-15-radar_ais.md
+++ b/_posts/2016-04-15-radar_ais.md
@@ -20,6 +20,9 @@ For the master thesis, the following tasks are proposed:
 2. Out-of-sequence measurements: Sometimes AIS measurements arrive with signficant delays. Processing such measurements require special techniques.
 3. Target swapping: Sometimes AIS swaps the identities of two ships. Such situations must be detected and handled appropriately.
 
+## Autosea
+The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
+
 ## Supervisors
 Main supervisor: [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo), Associate Professor, NTNU
 
