--- a/_posts/2015-11-20-mpc.md
+++ b/_posts/2015-11-20-mpc.md
@@ -7,6 +7,8 @@ Model-predictive control (MPC) is an advanced control technique consisting in th
 
 The objective of the thesis is the study of an MPC approach to the collision avoidance problem for unmanned ships. Predictions and optimization are key ingredients in the design of reliable and efficient collision avoidance control schemes, which typically include both physical constraints, e.g. input bounds and operational limits, and logic constraints, e.g. navigation rules. The workload has to be divided into a theoretical part, consisting in the analysis and synthesis of the system architecture, and a simulation part, using a suitable numerical optimization toolbox.
 
+## Autosea
+The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
 
 ## Supervisors
 
