--- a/_posts/2015-11-20-vo.md
+++ b/_posts/2015-11-20-vo.md
@@ -7,5 +7,8 @@ The velocity obstacle is a popular and well-established approach for maritime co
 
 In this project, the first objective will be to integrate the velocity obstacle in line-of-sight-based guidance. Then, solutions shall be developed for some of the scenarios that currently poses challenges to velocity obstacle based collision avoidance. Such situations include oscillatory wobbling/hesitation, complex traffic, vehicles in formation, presence of both moving and static obstacles, violations of COLREGS and collision avoidance with limited or uncertain sensor information.
 
+## Autosea
+The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
+
 ## Contact
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
