Fixed caps in titles

--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  Dynamic Positioning for ASV
-[//]: # subtitle: Visualization and Situation Awareness
+title:  Dynamic positioning for ASV
+[//]: # subtitle: Visualization and situation awareness
 ---
 
 ![The Telemetron vehicle of Maritime Robotics]({{site.url}}/assets/telemetron4a.jpg)
