--- a/_posts/2015-11-20-mpc.md
+++ b/_posts/2015-11-20-mpc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  A model-predictive control approach to collision avoidance for ASVs
-[//]: # subtitle: Visualization and Situation Awareness
+[//]: # subtitle: Visualization and situation awareness
 ---
 Model-predictive control (MPC) is an advanced control technique consisting in the definition of a cost function depending on the predicted behavior of controlled variables on the basis of the model and according to a prescribed set of constraints. The desired control action is then obtained through an optimization procedure over a finite prediction horizon.
 
