Renamed DW proposal

--- a/_posts/2016-04-15-dw-colav.md
+++ b/_posts/2016-04-15-dw-colav.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Collision avoidance for ASVs using the Dynamic Window approach
+title: Collision avoidance for ASVs using Dynamic Window
 ---
 Autonomous technology is spreading across numerous applications at an unprecedented pace. Amongst others, the DARPA Grand Challenge for autonomous ground vehicles has given an indication of what is possible to achieve using state-of-the-art sensors in combination with cleverly designed autonomous algorithms. We believe the increasing use of autonomy in vehicle systems eventually will propagate to the maritime industry and that we will see an increasing level of autonomy on ships in order to increase safety, and to reduce operational costs, emissions and impacts from human-induced errors.
 
