--- a/_posts/2016-04-15-radar_ais.md
+++ b/_posts/2016-04-15-radar_ais.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Multi-target tracking using radar and AIS
+category: SF
 ---
 All vessels of a certain size are required to be connected to the Automatic Identification System (AIS). AIS equipment on board the ship transmits its unique ID tag, position and velocity to nearby vehicles. Together with maritime radar, AIS is therefore  a key technology in collision maritime avoidance.
 
