--- a/_posts/2015-11-20-dp.md
+++ b/_posts/2015-11-20-dp.md
@@ -2,6 +2,7 @@
 layout: post
 title:  Dynamic positioning for ASV
 [//]: # subtitle: Visualization and situation awareness
+category: MISC
 ---
 
 ![The Telemetron vehicle of Maritime Robotics]({{site.url}}/assets/telemetron4a.jpg)
