--- a/_posts/2015-11-20-vo.md
+++ b/_posts/2015-11-20-vo.md
@@ -6,9 +6,9 @@ category: COLAV
 ---
 The velocity obstacle is a popular and well-established approach for maritime collision avoidance. In this method, velocities that will lead to collision with an obstacle any time in the future are excluded from the space of allowed velocities. Key benefits of this method is that it is computationally cheap, and that it easily can be adapted to take traffic rules at sea (COLREGS) into account. A major drawback is that it relies on an assumption of constant velocity of the ownship.
 
-## Scope of Specialization Project 
+## Scope of specialization project 
 
-In this project, the first objective will be to integrate the velocity obstacle in line-of-sight-based guidance. Then, solutions shall be developed for some of the scenarios that currently poses challenges to velocity obstacle based collision avoidance. Such situations include oscillatory wobbling/hesitation, complex traffic, vehicles in formation, presence of both moving and static obstacles, violations of COLREGS and collision avoidance with limited or uncertain sensor information.
+The goal is to make a VO-based COLAV method such that the method satisfies the following 3 criteria:
 
 <ol type="a">
 <li>It should adjust the strength of its avoidance maneuver (including turning and braking times) according to the severity of the situation.</li>
@@ -16,9 +16,20 @@ In this project, the first objective will be to integrate the velocity obstacle 
 <li>It should maintain chosen course and velocity over a considerable time, instead of fluctuating or oscillating too rapidly to be clearly observed by other vehicles.</li>
 </ol>
 
+Possible techniques for achieve these objectives may include 
+- Usage of cost functions that utilize knowledge about time to closest point of approach (TCPA) etc.
+- Control techniques that go beyond standard feedback control. This may include techniques based on Model Predictive Control (MPC), optimal control and or feedforward control.
+- Logic, controllers or more refined cost functions designed to prevent oscillating behavior.
 
-## Scope of Master Thesis Project 
+The method should be tested in a variety of both single-vehicle and multi-vehicle situations. An important part of the analysis is to identify circumstances on which any of the criteria a), b) or c) are difficult to satisfy. 
 
+## Scope of master thesis project 
+
+The specialization project is supposed to be followed by a master’s thesis building on the project work. Several options are possible, depending on the interest of the student:
+- Development of new strategies to mend shortcomings of the VO identified in the specialization project.
+- Development of new COLAV methods based on trajectory tracking and/or MPC, with cost-functions inspired by the results of the specialization project.
+- Integration of COLAV with sensor fusion, and validation of the combined system in simulations and/or full-scale experiments.
+- Visualization, in order to develop a reliable decision support system. 
 
 ## Autosea
 The candidate will be associated with the AUTOSEA project, which is a collaborative research project between NTNU, DNV GL, Kongsberg Maritime and Maritime Robotics, focused on achieving world-leading competence and knowledge in the design and verification of methods and systems for sensor fusion and COLAV for ASVs. The project has access to supervision and physical test platforms through our industry partners.
