--- a/_posts/2015-11-20-vo.md
+++ b/_posts/2015-11-20-vo.md
@@ -4,7 +4,7 @@ title:  Collision avoidance for ASVs using Velocity Obstacle
 subtitle: Integration with LOS guidance and handling of complex and ambiguous situations.
 category: COLAV
 ---
-The velocity obstacle is a popular and well-established approach for maritime collision avoidance. In this method, velocities that will lead to collision with an obstacle any time in the future are excluded from the space of allowed velocities. Key benefits of this method is that it is computationally cheap, and that it easily can be adapted to take traffic rules at sea (COLREGS) into account. A major drawback is that it relies on an assumption of constant velocity of the ownship.
+The velocity obstacle is a popular and well-established approach for maritime collision avoidance (COLAV). In this method, velocities that will lead to collision with an obstacle any time in the future are excluded from the space of allowed velocities. Key benefits of this method is that it is computationally cheap, and that it easily can be adapted to take traffic rules at sea (COLREGS) into account. A major drawback is that it relies on an assumption of constant velocity of the ownship.
 
 ## Scope of specialization project 
 
@@ -36,3 +36,7 @@ The candidate will be associated with the AUTOSEA project, which is a collaborat
 
 ## Contact
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
+
+## References
+
+* Kuwata et al. (2014): "[Safe Maritime Autonomous Navigation With COLREGS, Using Velocity Obstacles](http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6519944)", IEEE Journal of Oceanic Engineering.
