--- a/_posts/2015-11-20-vo.md
+++ b/_posts/2015-11-20-vo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Collision avoidance for ASVs using Velocity Obstacle 
-subtitle: Integration with LOS guidance and handling of complex and ambiguous situations.
+subtitle: Advances towards practical situational awareness
 category: COLAV
 ---
 The velocity obstacle is a popular and well-established approach for maritime collision avoidance (COLAV). In this method, velocities that will lead to collision with an obstacle any time in the future are excluded from the space of allowed velocities. Key benefits of this method is that it is computationally cheap, and that it easily can be adapted to take traffic rules at sea (COLREGS) into account. A major drawback is that it relies on an assumption of constant velocity of the ownship.
