Removed specific years from the proposals, and added Mikkel as co-supervisor for Kinematic control

--- a/_posts/2016-04-15-obsTraj.md
+++ b/_posts/2016-04-15-obsTraj.md
@@ -7,21 +7,21 @@ Autonomous technology is spreading across numerous applications at an unpreceden
 
 When operating autonomously at sea, a collision avoidance (COLAV) system must be able to tackle the dangers imposed by other vessels operating in the same area. To avoid moving obstacles, one must have an idea about the future positions of these obstacles. A common approach is to assume that other vessels will keep their course and speed, and calculate a straight-line trajectory based on this assumption. This approach may, however, prove insufficient in some scenarios. By considering previous positions, electronic nautical charts, historical and/or real-time AIS (automatic identification system) data, traffic lanes etc., better estimates can often be obtained. This project will look into alternative solutions based on such data.
 
-This proposal is intended as a combined project and master thesis during the autumn of 2016 and spring of 2017. 
+This proposal is intended as a combined project and master thesis.
 
 | <img src="{{site.url}}/assets/ecdismap.jpg" width="370"> | | <img src="{{site.url}}/assets/aismap.png" width="370"> |
 |:---:| :---: |:---:|
 | Electronic charts contains large amount of static information, which can be usable for predicting future vessel positions. | | AIS data can give additional information about both historical trajectories, and current intentions of other vessels. |
 
 ## Proposed Tasks
-**For the project assignment (autumn 2016), the following tasks are proposed:**
+**For the project assignment, the following tasks are proposed:**
 
 1. Write a survey of possible techniques for long and short-term obstacle trajectory prediction. The candidate should also get an overview of the international regulations for avoiding collision at sea (COLREGS) and some suitable COLAV algorithms.
 2. Define a suitable parameterization for obstacle trajectories.
 3. Implement a simulation framework with moving obstacles in 3 DOF.
 4. Look into using information from electronic nautical charts to impose constraints on the predicted trajectories.
 
-**For the master thesis (spring 2017), the following tasks are proposed:**
+**For the master thesis, the following tasks are proposed:**
 
 1. Use historical AIS data to provide further refinement to the prediction technique.
 2. Is real-time AIS data useful (and reliable) to impose further constraints on the prediction?
