--- a/_posts/2017-03-26-glint.md
+++ b/_posts/2017-03-26-glint.md
@@ -9,6 +9,8 @@ The Autosea project in colloboration with [AMOS](http://ntnu.edu/amos) aims to b
 
 Radar tends to be the most reliable and robust of the imaging sensors mentioned, but it also suffers from weaknesses of its own. One such weakness is the issue of glint: Interference between nearby scatterers on the target may cause the bearing measurement to deviate significantly from its true value. Apart from such phenomona, the radar is of course subject to the same trade-offs between misdetections and false alarms as any other sensor is. 
 
+![Glint effect]({{site.url}}/assets/glint.png)
+
 ## Scope
 If the tracking method is “made aware” that glint can occur, it may put less emphasis on suspicious measurements.  The goal of this project is to automate this awareness, both in state estimation and in data association. 
 
