--- a/_posts/2017-03-26-glint.md
+++ b/_posts/2017-03-26-glint.md
@@ -49,3 +49,8 @@ The candidate will be associated with the AUTOSEA project, which is a collaborat
 
 ## Contact
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)
+
+## References
+* Bilik, I. & Tabrikian, J. (2006): ["Target Tracking in Glint Noise Environment Using Nonlinear Non-Gaussian Kalman Filter"](http://ieeexplore.ieee.org/document/1631813/), Proceedings of IEEE RADAR Conference. 
+
+* Musicki, D., Evans, R. & Stankovic, S., (1994): "[Integrated Probabilistic Data Association](http://ieeexplore.ieee.org/document/293185/)", IEEE Transactions on Automatic Control.
