--- a/_posts/2017-04-22-revolt.md
+++ b/_posts/2017-04-22-revolt.md
@@ -26,4 +26,4 @@ Focus areas:
 * Sensor implementation: Implement models of the new sensor package on the Digital twin. Several sensors will "see" the same surroundings, how to ensure that all sensors have the same map of the world? The simulator will be used for both functional and failure testing of several systems needed for doing autonomous navigations. What is realistic sensor errors and how should this be implemented? Perform several simulations verifying the simulator capabilities.
 
 Main supervisor: [Morten Breivik](http://www.ntnu.no/ansatte/morten.breivik). <br />
-Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV-GL).
+Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV GL).
