--- a/_posts/2017-04-22-revolt.md
+++ b/_posts/2017-04-22-revolt.md
@@ -24,6 +24,8 @@ Focus areas:
 * Control strategies: Using the physical ReVolt model with the new sensor package, implement different control strategies (including collision avoidance) and perform several model experiments to test and validate the implemented algorithms. 
 * Virtual world  modelling: To be able to perform simulator based testing of the collision avoidance algorithms, some kind of virtual world modelling needs to be done e.g. simulation of marine traffic and sea/terrain.
 * Sensor implementation: Implement models of the new sensor package on the Digital twin. Several sensors will "see" the same surroundings, how to ensure that all sensors have the same map of the world? The simulator will be used for both functional and failure testing of several systems needed for doing autonomous navigations. What is realistic sensor errors and how should this be implemented? Perform several simulations verifying the simulator capabilities.
+* Design and verification of safety critical systems : Analyse the ReVolt model and system by using the STAMP analysis method to establish safe design requirements and verification objectives.  The analysis can be done several times as the ReVolt model system is developed and equipped further towards more autonomy.  Present safety standards and how they can be combined with STAMP is also interesting.
 
 Main supervisor: [Morten Breivik](http://www.ntnu.no/ansatte/morten.breivik). <br />
-Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV GL).
+Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV GL). <br />
+For "Design and verification of safety critical systems": Mary Ann Lundteigen and Jon Arne Glomsrud.
