--- a/_posts/2017-04-22-revolt.md
+++ b/_posts/2017-04-22-revolt.md
@@ -27,5 +27,4 @@ Focus areas:
 * Design and verification of safety critical systems : Analyse the ReVolt model and system by using the STAMP analysis method to establish safe design requirements and verification objectives.  The analysis can be done several times as the ReVolt model system is developed and equipped further towards more autonomy.  Present safety standards and how they can be combined with STAMP is also interesting.
 
 Main supervisor: [Morten Breivik](http://www.ntnu.no/ansatte/morten.breivik). <br />
-Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV GL). <br />
-For "Design and verification of safety critical systems": Mary Ann Lundteigen and Jon Arne Glomsrud.
+Co-supervisors: Edmund Brekke, Tom Arne Pedersen (DNV GL), Øystein Engelhardtsen (DNV GL). For "Design and verification of safety critical systems": Mary Ann Lundteigen and Jon Arne Glomsrud (DNVL GL).
