Elaborate on mpc post

--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -6,7 +6,26 @@ category: COLAV
 ---
 Model-predictive control (MPC) is an advanced control technique consisting in the definition of a cost function depending on the predicted behavior of controlled variables on the basis of the model and according to a prescribed set of constraints. The desired control action is then obtained through an optimization procedure over a finite prediction horizon.
 
-The objective of the thesis is the study of an MPC approach to the collision avoidance problem for unmanned surface vehicles in confined harbor environments.
+In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance is proposed. At each run of the MPC simulations are run for a finite set of control input modifications. The resulting trajectories are evaluated by a cost function and the modification incurring the lowes cost in then applied to the vessel. The method has been implemented and tested in open water situations without geographical constraints. The objective of the specializarion project is the study of this MPC approach to the collision avoidance problem for unmanned surface vehicles in confined harbor environments.
+
+
+
+## Proposed tasks specialization project
+
+* Implement the scenario-based MPC approach, including geographical constraints.
+* Identify collision avoidance situations that are likely to occur in a confined harbour environment.
+* Perform a simulation study to identify strengths and weaknesses with the proposed method.
+* Propose and implement modifications to the algotithm to improve it's performance in a confined environment.
+
+
+## Proposed tasks master thesis project
+
+The specialization project is supposed to be followed by a master's thesis building on the project work. Several options are possible depending on the interests of the student.
+
+* Implementation of other MPC methods for collision avoidance.
+* Investigate the possibility of using automatic tuning methods for the cost function weights.
+* Optimize the algorithm with regard to its run-time.
+
 
 
 ## Supervisors
@@ -14,3 +33,8 @@ The objective of the thesis is the study of an MPC approach to the collision avo
 Main supervisor: [Edmund Brekke](http://www.ntnu.no/ansatte/edmundfo), Associate Professor, NTNU
 
 Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen), PhD Candidate, NTNU.
+
+
+## References
+
+* Johansen et al. (2016): “[Ship Collision Avoidance and COLREGS Compliance Using Simulation-Based Control Behavior Selection With Predictive Hazard Assessment](https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=)”, IEEE Transactions on Intelligent Transportation Systems.
