--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -8,6 +8,10 @@ Model-predictive control (MPC) is an advanced control technique consisting in th
 
 In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance is proposed. At each run of the MPC simulations are run for a finite set of control input modifications. The resulting trajectories are evaluated by a cost function and the modification incurring the lowes cost in then applied to the vessel. The method has been implemented and tested in open water situations without geographical constraints. The objective of the specializarion project is the study of this MPC approach to the collision avoidance problem for unmanned surface vehicles in confined harbor environments.
 
+|![]({{site.url}}/assets/ravnkloa.png)|![]({{site.url}}/assets/ravnkloa.png)|
+|:---:|:---:|
+|Harbour environment| Photo from collision avoidance tests |
+
 
 
 ## Proposed tasks specialization project
@@ -15,7 +19,7 @@ In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance i
 * Implement the scenario-based MPC approach, including geographical constraints.
 * Identify collision avoidance situations that are likely to occur in a confined harbour environment.
 * Perform a simulation study to identify strengths and weaknesses with the proposed method.
-* Propose and implement modifications to the algotithm to improve it's performance in a confined environment.
+* Propose and implement modifications to the algorithm to improve its performance in a confined environment.
 
 
 ## Proposed tasks master thesis project
