--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -8,10 +8,17 @@ Model-predictive control (MPC) is an advanced control technique consisting in th
 
 In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance is proposed. At each run of the MPC simulations are run for a finite set of control input modifications. The resulting trajectories are evaluated by a cost function and the modification incurring the lowes cost in then applied to the vessel. The method has been implemented and tested in open water situations without geographical constraints. The objective of the specializarion project is the study of this MPC approach to the collision avoidance problem for unmanned surface vehicles in confined harbor environments.
 
-|![]({{site.url}}/assets/ravnkloa.png)|![]({{site.url}}/assets/ravnkloa.png)|
-|:---:|:---:|
-|Harbour environment| Photo from collision avoidance tests |
-
+<div class="container">
+    <div style="float:left; width:59%; text-align:center; font-size:80%;">
+        <img src="{{site.url}}/assets/sbmpc_head_on_photo.pdf">
+        Collison avoidance test - head on scenario
+    </div>
+    <div style="float:right; width:38%; text-align:center; font-size:80%;">
+        <img src="{{site.url}}/assets/ravnkloa.jpg">
+        Harbor environment - Ravnkloa, Trondheim
+    </div>
+    <p style="clear: both;">
+</div>
 
 
 ## Proposed tasks specialization project
