--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -22,7 +22,7 @@ In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance i
 </div>
 -->
 
-![Collison avoidance test - head on scenario](/Users/inger/Autoferry/autoferry.github.io/assets/sbmpc_head_on_photo.pdf ){:width="500px"}
+![Collison avoidance test - head on scenario]({{site.url}}/assets/sbmpc_head_on_photo.pdf ){:width="500px"}
 *Collison avoidance test - head on scenario*
 
 
