--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -10,14 +10,43 @@ Estimating the extent jointly with the kinematic state is known as extended obje
 
 EOT is of particular relevance to the autonomous ferry application. Short-range high-resolution sensors (e.g., lidar) will be used for collision avoidance. Since the Canal is relatively narrow the ferry will inevitably have to navigate very close other vessels, and having a good estimate of their extents is therefore very important.
 
-This autumn project will build upon a previous autumn project and master thesis to develop a reliable EOT method for the autonomous ferry.
+This autumn project will build upon a previous autumn project and master thesis to develop a reliable EOT method for the autonomous ferry. The focus will be on tracking of boats of a certain size such as the Munkholmen ferry.
+
+| <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/extent_ais_pos.png" width="370"> |
+|:---:| :---: |:---:|
+| The ferry towards Munkholmene maneuvering on its way out through the Canal. | | Example of varying target extent in radar data. |
 
 ## Proposed Tasks
+
 Tasks for the autumn project:
 
-1. Write a survey on feature measurements and other non-standard measurements used in the target tracking literature.
-2. Select three such measurement types and investigate their potential for target detection, data association or state estimation through simulations and/or implementation on radar data. 
-3. Discuss the findings in a report.
+1. Conduct a literature study on relevant methods for multi-target tracking and extended object tracking.
+2. Describe similarities and differences between conventional multi-target tracking and extended object tracking in the report.
+3. Propose a solution to the data association problem in single-target lidar tracking of sizeable objects.
+4. Propose a solution to the filtering problem in single-target lidar tracking of sizeable objects.
+5. Test the methods in simulations and on real data.
+6. Discuss the findings in a report.
+
+For the MSc project several directions are possible.
+
+- Application of the methods in collision avoidance systems.
+- More extensive data gathering, using the lidar mounted on the autonomous ferry prototype.
+- In-depth studies of multi-target and/or multi-scan EOT, and track initialization of EOT.
+- Applications of EOT in radar tracking or sensor fusion.
+
+## Prerequisites
+
+Required backgroud knowledge
+
+- Experience in either Matlab, Python or C++.
+- TTK4115 - Linear System Theory.
+
+Useful but not required background knowledge
+
+- Additional courses in statistics, sensor systems and/or machine learning.
+- Knowledge of ROS
+
+This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion. 
 
 ## Contact 
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
