--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -46,8 +46,14 @@ Useful but not required background knowledge
 - Additional courses in statistics, sensor systems and/or machine learning.
 - Knowledge of ROS
 
-This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion. 
+This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion.
 
 ## Contact 
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
+
+## References
+
+* Granström, K., Reuter, S., Meissner, D. & Scheel, A. (2014): “[A multiple model PHD approach to tracking of cars under an assumed rectangular shape](https://ieeexplore.ieee.org/document/6915991/)”, FUSION 2014.
+* Granström, K., Baum, M. & Reuter, S. (2016): “[Extended Object Tracking: Introduction, Overview and Applications](https://arxiv.org/abs/1604.00970)”, Journal of Advances in Information Fusion.
+* Schuster, M. & Reuter, J. (2015): “[Target tracking in marine environment using automotive radar and laser range sensor](https://ieeexplore.ieee.org/document/7284009/)”, MMAR 2015.
 
