--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -6,7 +6,12 @@ category: SF
 ## Background
 Target tracking concerns estimating the movement of one or more objects based on measurements of the objects. Most commonly, the measurements of an object is assumed to be a single point in range and bearing, or in cartesian coordinates. However, when sensors with high resolution is used, this assumption becomes questionable, as the extent of observed objects also can be seen.
 
-Estimating the extent jointly with the kinematic state is known as extended object tracking (EOT). This is a fairly recent field which entails several challenges. These include parametrization of the extent, efficient data association, modeling of maneuvers and how to deal with situations where only parts of the object are visible.
+Estimating the extent jointly with the kinematic state is known as extended object tracking (EOT). This is a fairly recent field which entails several challenges. Research on EOT needs to answer several important and difficult questions:
+
+- How should target extent be parameterized?
+- How does one figure out which measurements comes from the object, and which measurements are noise? (This is known as data association).
+- How does one deal with situations where only parts of the object is visible?
+- How should maneuvers of an extended object be modeled?
 
 EOT is of particular relevance to the autonomous ferry application. Short-range high-resolution sensors (e.g., lidar) will be used for collision avoidance. Since the Canal is relatively narrow the ferry will inevitably have to navigate very close other vessels, and having a good estimate of their extents is therefore very important.
 
@@ -14,7 +19,7 @@ This autumn project will build upon a previous autumn project and master thesis 
 
 | <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/extent_ais_pos.png" width="370"> |
 |:---:| :---: |:---:|
-| The ferry towards Munkholmene maneuvering on its way out through the Canal. | | Example of varying target extent in radar data. |
+| The ferry towards Munkholmen as seen by the lidar (different colors are data from different time steps). | | Example of varying target extent in radar data. |
 
 ## Proposed Tasks
 
