update mpc with ferry picture

--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -54,3 +54,5 @@ Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen), PhD 
 ## References
 
 * Johansen et al. (2016): “[Ship Collision Avoidance and COLREGS Compliance Using Simulation-Based Control Behavior Selection With Predictive Hazard Assessment](https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=)”, IEEE Transactions on Intelligent Transportation Systems.
+
+![Ferry launch]({{site.url}}/assets/fergelaunch_small.png ){:width="500px"}
